# Tipsy2026

./: .gitignore  README.md  docker-compose.yml
apps/admin-ui/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/admin-ui/src/: App.tsx  index.css  types.ts
apps/admin-ui/src/components/: Badge.tsx  Button.tsx  Card.tsx  Field.tsx  SectionHeading.tsx  Sidebar.tsx  StatCard.tsx  StatusMessage.tsx  TopHeader.tsx
apps/api/: .env.example  pyproject.toml
apps/api/.vendor/pygments-2.19.2.dist-info/: RECORD
apps/api/.vendor/pytest-9.0.2.dist-info/: RECORD
apps/api/.vendor/python_dotenv-1.2.2.dist-info/: RECORD
apps/api/app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  seed.py
apps/api/app/hardware/: __init__.py  base.py  factory.py  gpio.py  mock.py  pins.py  rpi_gpio_adapter.py
apps/api/app/intelligence/: __init__.py  recommendations.py
apps/api/app/routes/: __init__.py  ingredients.py  logs.py  orders.py  pumps.py  recipes.py  system.py
apps/api/app/services/: __init__.py  ingredient_service.py  log_service.py  order_service.py  pump_service.py  recipe_service.py  system_service.py
apps/api/tests/: conftest.py  test_api.py  test_hardware_factory.py  test_services.py
apps/api/tipsy_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/touchscreen-ui/: index.html  package-lock.json  package.json  tailwind.config.ts
apps/touchscreen-ui/src/: App.tsx  config.ts  drinkImages.ts  index.css  types.ts
scripts/: dev_start.sh  pi_start.sh  setup_api.ps1
shared/contracts/: README.md  api.ts
(+32 files in other folders)
